--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,18 +1,17 @@
 {% load static %}
 
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<!-- Font -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600%7CUbuntu:300,400,500,700" rel="stylesheet"> 
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600%7CUbuntu:300,400,500,700" rel="stylesheet"> 
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="{% static 'css/bootstrap-reboot.min.css' %}" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap-reboot.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/bootstrap-grid.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}" />
@@ -23,85 +22,84 @@
     <link rel="stylesheet" href="{% static 'css/default-skin.css' %}" />
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
 
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" href="{% static 'icon/favicon-32x32.png' %}" sizes="32x32">
+    <link rel="apple-touch-icon" href="{% static 'icon/favicon-32x32.png' %}">
+    <link rel="apple-touch-icon" sizes="72x72" href="{% static 'icon/apple-touch-icon-72x72.png' %}">
+    <link rel="apple-touch-icon" sizes="114x114" href="{% static 'icon/apple-touch-icon-114x114.png' %}">
+    <link rel="apple-touch-icon" sizes="144x144" href="{% static 'icon/apple-touch-icon-144x144.png' %}">
 
-	<!-- Favicons -->
-	<link rel="icon" type="image/png" href="{% static 'icon/favicon-32x32.png' %}" sizes="32x32">
-	<link rel="apple-touch-icon" href="{% static 'icon/favicon-32x32.png' %}">
-	<link rel="apple-touch-icon" sizes="72x72" href="{% static 'icon/apple-touch-icon-72x72.png' %}">
-	<link rel="apple-touch-icon" sizes="114x114" href="{% static 'icon/apple-touch-icon-114x114.png' %}">
-	<link rel="apple-touch-icon" sizes="144x144" href="{% static 'icon/apple-touch-icon-144x144.png' %}">
-
-	<meta name="description" content="">
-	<meta name="keywords" content="">
-	<meta name="author" content="Dmitry Volkov">
-	
-	<title>Login</title>
-		
-	
-		
-
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="Dmitry Volkov">
+    
+    <title>Login</title>
 </head>
+
 <body class="body">
 
-  <div class="sign section--bg" data-bg="{% static 'img/section/section.jpg' %}">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="sign__content">
-            <!-- authorization form -->
-            <form action="#" class="sign__form" method="post">
-              {% csrf_token %}
-              <a href="{% url 'home:home' %}" class="sign__logo">
-                <img src="{% static 'img/logo.svg' %}" alt="home">
-              </a>
+    <!-- Sign Section with Background -->
+    <div class="sign section--bg" data-bg="{% static 'img/section/section.jpg' %}">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="sign__content">
+                        <!-- Authorization Form -->
+                        <form action="#" class="sign__form" method="post">
+                            {% csrf_token %}
 
-              <!-- نمایش خطاهای عمومی فرم -->
-              {% if form.non_field_errors %}
-                <div class="sign__error">
-                  {% for error in form.non_field_errors %}
-                    {{ error }}
-                  {% endfor %}
+                            <!-- Logo -->
+                            <a href="{% url 'home:home' %}" class="sign__logo">
+                                <img src="{% static 'img/logo.svg' %}" alt="home">
+                            </a>
+
+                            <!-- Display non-field form errors -->
+                            {% if form.non_field_errors %}
+                                <div class="sign__error">
+                                    {% for error in form.non_field_errors %}
+                                        {{ error }}
+                                    {% endfor %}
+                                </div>
+                            {% endif %}
+
+                            <!-- Email Input -->
+                            <div class="sign__group">
+                                {{ form.email }}
+                                {% for error in form.email.errors %}
+                                    <div class="sign__error">{{ error }}</div>
+                                {% endfor %}
+                            </div>
+
+                            <!-- Password Input -->
+                            <div class="sign__group">
+                                {{ form.password }}
+                                {% for error in form.password.errors %}
+                                    <div class="sign__error">{{ error }}</div>
+                                {% endfor %}
+                            </div>
+
+                            <!-- Remember Me Checkbox -->
+                            <div class="sign__group sign__group--checkbox">
+                                <input id="remember" name="remember" type="checkbox" checked="checked">
+                                <label for="remember">Remember Me</label>
+                            </div>
+
+                            <!-- Submit Button -->
+                            <button class="sign__btn" type="submit">Login</button>
+
+                            <!-- Links -->
+                            <span class="sign__text">Don't have an account? <a href="{% url 'account:register' %}">Register!</a></span>
+                            <span class="sign__text"><a href="#">Forgot password?</a></span>
+                        </form>
+                        <!-- End Authorization Form -->
+                    </div>
                 </div>
-              {% endif %}
-
-              <div class="sign__group">
-                {{ form.email }}
-                {% for error in form.email.errors %}
-                  <div class="sign__error">{{ error }}</div>
-                {% endfor %}
-              </div>
-
-              <div class="sign__group">
-                {{ form.password }}
-                {% for error in form.password.errors %}
-                  <div class="sign__error">{{ error }}</div>
-                {% endfor %}
-              </div>
-
-              <div class="sign__group sign__group--checkbox">
-                <input id="remember" name="remember" type="checkbox" checked="checked">
-                <label for="remember">Remember Me</label>
-              </div>
-
-              <button class="sign__btn" type="submit">Login</button>
-
-              <span class="sign__text">Don't have an account? <a href="{% url 'account:register' %}">Register!</a></span>
-
-              <span class="sign__text"><a href="#">Forgot password?</a></span>
-            </form>
-            <!-- end authorization form -->
-          </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 
- 
-</body>
-
-
-	<!-- JS -->
- <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <!-- JS -->
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
     <script src="{% static 'js/jquery.mousewheel.min.js' %}"></script>
@@ -113,6 +111,6 @@
     <script src="{% static 'js/photoswipe.min.js' %}"></script>
     <script src="{% static 'js/photoswipe-ui-default.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
-</body>
 
+</body>
 </html>
