--- a/post/templates/post/search.html
+++ b/post/templates/post/search.html
@@ -1,122 +1,132 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}{{post.title}}{% endblock %}
+{% block title %}{{ post.title }}{% endblock %}
 
+{% block home %}{% endblock home %}
 
- {% block home %}{% endblock home %}
+{% block content %}
 
-
- {% block content %}
-	
-	<!-- page title -->
-	<section class="section section--first section--bg" data-bg="{% static 'img/section/section.jpg' %}">
-		<div class="container">
-			<div class="row">
-				<div class="col-12">
-					<div class="section__wrap">
-						<!-- section title -->
-						<h2 class="section__title">Search</h2>
-						<!-- end section title -->
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- end page title -->
-	 <!-- filter -->
-  <div class="filter">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="filter__content">
-            <div class="filter__items">
-          </div>
+    <!-- Page Title -->
+    <section class="section section--first section--bg" data-bg="{% static 'img/section/section.jpg' %}">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section__wrap">
+                        <!-- Section Title -->
+                        <h2 class="section__title">Search</h2>
+                        <!-- End Section Title -->
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+    </section>
+    <!-- End Page Title -->
+
+    <!-- Filter -->
+    <div class="filter">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="filter__content">
+                        <div class="filter__items">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  <!-- end filter -->
+    <!-- End Filter -->
 
-	<!-- catalog -->
-	<div class="catalog">
-		<div class="container">
-			<div class="row">
-				<!-- card -->
-			{% for post in results %}
-				<div class="col-6 col-sm-12 col-lg-6">
-					<div class="card card--list">
-						<div class="row">
-							<div class="col-12 col-sm-4">
-								<div class="card__cover">
-									<img src="{{post.cover.url}}" alt="{{post.title}}">
-									<a href="#" class="card__play">
-										<i class="icon ion-ios-play"></i>
-									</a>
-								</div>
-							</div>
+    <!-- Catalog -->
+    <div class="catalog">
+        <div class="container">
+            <div class="row">
 
-							<div class="col-12 col-sm-8">
-								<div class="card__content">
-									<h3 class="card__title"><a href="#">{{post.title}}</a></h3>
-									<span class="card__category">
-										<a href="#">{{ post.category.all.0 }}</a>
-									</span>
+                <!-- Cards -->
+                {% for post in results %}
+                    <div class="col-6 col-sm-12 col-lg-6">
+                        <div class="card card--list">
+                            <div class="row">
 
-									<div class="card__wrap">
-										<span class="card__rate"><i class="icon ion-ios-star"></i>{{ post.rating }}</span>
+                                <!-- Card Cover -->
+                                <div class="col-12 col-sm-4">
+                                    <div class="card__cover">
+                                        <img src="{{ post.cover.url }}" alt="{{ post.title }}">
+                                        <a href="#" class="card__play">
+                                            <i class="icon ion-ios-play"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <!-- End Card Cover -->
 
-										<ul class="card__list">
-											<li>{{ post.quality }}</li>
-											<li>{{ post.age_rating }}</li>
-										</ul>
-									</div>
+                                <!-- Card Content -->
+                                <div class="col-12 col-sm-8">
+                                    <div class="card__content">
+                                        <h3 class="card__title">
+                                            <a href="#">{{ post.title }}</a>
+                                        </h3>
+                                        <span class="card__category">
+                                            <a href="#">{{ post.category.all.0 }}</a>
+                                        </span>
 
-									<div class="card__description">
-										<p>{{ post.description }}</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				{% endfor %}
-				<!-- end card -->
-				        <!-- paginator -->
-						<div class="col-12">
-						{% if is_paginated %}
-						<ul class="paginator">
-							<!-- دکمه قبلی -->
-							{% if page_obj.has_previous %}
-							<li class="paginator__item paginator__item--prev">
-							<a href="?page={{ page_obj.previous_page_number }}"><i class="icon ion-ios-arrow-back"></i></a>
-							</li>
-							{% endif %}
+                                        <div class="card__wrap">
+                                            <span class="card__rate">
+                                                <i class="icon ion-ios-star"></i>{{ post.rating }}
+                                            </span>
+                                            <ul class="card__list">
+                                                <li>{{ post.quality }}</li>
+                                                <li>{{ post.age_rating }}</li>
+                                            </ul>
+                                        </div>
 
-							<!-- شماره صفحات داینامیک -->
-							{% for num in paginator.page_range %}
-							<li class="paginator__item {% if page_obj.number == num %}paginator__item--active{% endif %}">
-							<a href="?page={{ num }}">{{ num }}</a>
-							</li>
-							{% endfor %}
+                                        <div class="card__description">
+                                            <p>{{ post.description }}</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- End Card Content -->
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+                <!-- End Cards -->
 
-							<!-- دکمه بعدی -->
-							{% if page_obj.has_next %}
-							<li class="paginator__item paginator__item--next">
-							<a href="?page={{ page_obj.next_page_number }}"><i class="icon ion-ios-arrow-forward"></i></a>
-							</li>
-							{% endif %}
-						</ul>
-						{% endif %}
-						</div>
-						<!-- end paginator -->
-			</div>
-		</div>
-	</div>
-	<!-- end catalog -->
+                <!-- Paginator -->
+                <div class="col-12">
+                    {% if is_paginated %}
+                        <ul class="paginator">
 
+                            <!-- Previous Button -->
+                            {% if page_obj.has_previous %}
+                                <li class="paginator__item paginator__item--prev">
+                                    <a href="?page={{ page_obj.previous_page_number }}">
+                                        <i class="icon ion-ios-arrow-back"></i>
+                                    </a>
+                                </li>
+                            {% endif %}
 
+                            <!-- Page Numbers -->
+                            {% for num in paginator.page_range %}
+                                <li class="paginator__item {% if page_obj.number == num %}paginator__item--active{% endif %}">
+                                    <a href="?page={{ num }}">{{ num }}</a>
+                                </li>
+                            {% endfor %}
+
+                            <!-- Next Button -->
+                            {% if page_obj.has_next %}
+                                <li class="paginator__item paginator__item--next">
+                                    <a href="?page={{ page_obj.next_page_number }}">
+                                        <i class="icon ion-ios-arrow-forward"></i>
+                                    </a>
+                                </li>
+                            {% endif %}
+                        </ul>
+                    {% endif %}
+                </div>
+                <!-- End Paginator -->
+            </div>
+        </div>
+    </div>
+    <!-- End Catalog -->
 {% endblock content %}
-
-
